--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,54 +1,4 @@
-<div class="container-sm">
-  <div class="card w-25 mx-auto">
-    <div class="card-header">
-      <div class="card-title">
-        <h2>Sign up</h2>
-      </div>
-    </div>
-
-    <div class="card-body">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-
-        <div class="field">
-          <%= f.label :first_name %><br />
-          <%= f.text_field :first_name, class: "form-control", autofocus: true, autocomplete: "first_name" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :last_name %><br />
-          <%= f.text_field :last_name, class: "form-control" ,  autofocus: true, autocomplete: "last_name" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, class: "form-control" , autofocus: true, autocomplete: "email" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" , class: "form-control"%>
-        </div>
-
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control"%>
-        </div>
-
-        <div class="actions mt-3">
-          <%= f.submit "Sign up" , class: " form-control btn btn-primary"%>
-        </div>
-      <% end %>
-    </div>
-
-    <div class="card-footer">
-      <%= render "devise/shared/links" %>
-    </div>
-  </div>
-</div>
+<div class="container-sm" id="sign_up_container"></div>
 
 
 
